# exiqus-oss

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.railway  Makefile  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  alembic.ini  docker-compose.env.example  docker-compose.yml  pyproject.toml  railway.json  setup.sh  vercel.json
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-build-notes.md
alembic/: env.py
alembic/versions/: 001_initial_tables.py  20251003_2052-332cc2d7e766_increase_analysis_id_column_size_from_.py  20251004_0019-6f2b0a4bc7f7_increase_user_id_column_size_from_36_to_.py  20251022_1317-b579d682f397_add_github_username_role_to_analysis_.py  20251022_1407-bea70e427177_add_role_to_pr_analysis_records.py  20251022_1419-04e1283b342f_add_role_to_portfolio_analyses.py  20251022_1442-30e44396fcfd_add_role_to_pr_analysis_results.py  20251023_1133-cfae7ff43be3_add_repository_deep_dive_tracking.py  20251023_1419-7b42c9bc6ae9_fix_pr_analysis_records_autoincrement.py  20251025_2346-99a0832c96a9_add_status_field_to_analysis_tables.py  20251026_0021-a228480bb04d_add_status_to_portfolio_analyses.py  20251026_0150-4e1830c00cf2_add_progress_tracking_fields.py  add_analysis_cache_tables.py  add_batch_id_to_analysis_results.py  add_portfolio_analysis_tables.py  add_pr_analysis_tables.py  add_pr_count_api_calls_columns.py  add_scale_plus_and_batch_history.py  backfill_evidence_columns.py  comprehensive_scoring_purge.py  purge_backfilled_columns.py  purge_pr_analysis_inferences.py  purge_scoring_contamination.py
frontend/: .env.local.example  .gitignore  .prettierignore  FRONTEND_TOOLING.md  PORTFOLIO_PR_PDF_EXPORT_PLAN.md  biome.json  fix-eslint.sh  next.config.ts  package-lock.json  package.json  railway.json  test_pr_history.sh  tsconfig.json
frontend/public/: sample-batch-analysis.csv
frontend/test-artifacts/: pricing-cta-focused.js  pricing-cta-test.js  screenshot-test.js
migrations/: add_analysis_results_table.py  add_candidate_assessments_table.py  add_concurrency_mode_to_batch_analyses.py  add_custom_repo_size_limit.py  add_email_verification_tokens.sql  add_evidence_based_columns.py  add_portfolio_analyses_table.py  add_pr_count_column.sql  add_user_id_to_contact_messages.sql  add_user_privacy_fields.py
scripts/: compare_recommendations.py  create_admin.py  create_test_users.py  deactivate_trial.py  final_tier_showcase.py  find_unknown_metrics.py  generate_rsa_keys.py  hybrid_portfolio_analyzer.py  init-db.sql  setup_metered_billing.py  setup_stripe_products.py  showcase_all_tiers.py  startup.sh  test_api_keys.py  test_before_push.py  test_single_repo.py  validate_developer_portfolio.py  validate_performance.py  validate_pr_analysis.py  validate_pr_analysis_evidence_only.py  verify_api_response.py
src/github_analyzer/: __init__.py
test_repos/: test_repos_summary.json
test_repos/abandoned-project/: README.md  app.py  database.py  models.py
test_repos/beginner-learning/: README.md  fizzbuzz.py  variables.py
test_repos/copy-paste-tutorial/: README.md  manage.py
test_repos/empty-readme/: algorithm.py
test_repos/excellent-docs/: README.md
test_repos/inconsistent-commits/: README.md  file0.py  file7.py  file8.py  file9.py  update.py
test_repos/monorepo/: README.md
test_repos/no-tests/: README.md  payment_processor.py  refunds.py
test_repos/perfect-repo/: CONTRIBUTING.md  LICENSE  README.md  setup.py
test_repos/poor-practices/: backup.py.old  main.py  temp.py  utils.py
tests/: __init__.py  conftest.py  test_account_deletion.py
tests/ai/: test_portfolio_insights_generator.py  test_pr_insights_generator.py
tests/api/: __init__.py  test_auth_integration.py  test_batch_analysis.py  test_candidate_hub.py  test_dashboard.py  test_dependencies.py  test_main.py  test_password_reset.py  test_portfolio_analysis.py  test_pr_analysis.py  test_trial_activation.py  test_trial_admin.py  test_trial_enforcement.py  test_trial_management.py  test_trial_status.py
tests/billing/: __init__.py  test_billing_monitoring.py  test_overage_tracking.py  test_stripe_client.py  test_stripe_client_errors.py  test_stripe_metered.py  test_subscription_manager.py  test_subscription_manager_edge_cases.py  test_subscription_overage.py  test_subscription_renewal.py  test_usage_reporter.py  test_usage_reporter_failures.py  test_usage_tracker.py  test_webhook_handlers.py  test_webhook_security.py
tests/core/: test_pr_context_prompts.py  test_token_allocator.py
tests/data/: test_portfolio_analyzer.py  test_portfolio_evidence_extractor.py  test_portfolio_fetcher.py  test_pr_analyzer.py  test_pr_evidence_extractor.py  test_pr_fetcher.py  test_pr_models.py  test_pr_report_generator.py
tests/database/: __init__.py  test_api_quota_schema.py  test_api_tracking_fields.py  test_api_usage_overages.py  test_contact_operations.py  test_migrations.py  test_migrations_simple.py  test_models.py  test_operations_extended.py  test_simple.py  test_trial_models.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_ai_integration.py  test_analysis_limits.py  test_comprehensive_end_to_end.py  test_contact_form_flow.py  test_evidence_based_ai_integration.py  test_evidence_based_integration_new.py  (+4 more)
(+461 files in other folders)
